--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: sans-serif;
     font-size: 35pt;
-
+    
 }
 
 header { 
@@ -35,3 +35,20 @@ header {
     font-size: 15pt;
     text-align: center;
 }
+
+
+#bio ul li:nth-child(even){
+         color:#000;
+ }
+
+
+#hobbies {
+    
+    text-align: center;
+
+}
+
+#hobbies ul li:nth-child(even) {
+        color:#000; 
+}
+
