--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,16 @@ header {
         color:#000; 
 }
 
+#gallery {
+    border: 4px solid #677AA5;
+}
+
+#gallery img{
+    max-width: 100%;
+}
+
+#gallery figure {
+    text-align: center;
+}
+
+figcaption { font-size: 20pt;}
