--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,10 @@ h1, h2, h3, h4, h5, h6 {
 
 
 
-h2 { text-align: center; }
+h2 { 
+    text-align: center;
+    margin: .1rem;
+}
 
 
 
@@ -49,14 +52,16 @@ header { text-align: center; }
 
 
 #hobbies {
-    
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
 }
 
 #hobbies ul li:nth-child(even) {
         color:#000; 
 }
+
 
 #gallery {
     border: 4px solid #677AA5;
@@ -87,4 +92,22 @@ figcaption { font-size: 20pt;}
 #lit div p:first-letter {
     float: left;
     font-size: 3em;
+}
+
+@media screen and (min-width:60em)  {
+
+        figure {
+          display:grid;
+          grid-template-columns: 2fr 1fr;
+          }
+
+        figcaption{
+        display:flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 2rem;
+        margin-left: 1rem;
+
+
+                            }
 }
