--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,12 @@ header { text-align: center; }
 
 
 
+
+
+
+
+
+
 #hero,footer { 
     border: 4px solid #677AA5 ;
     color: #487FFA;
@@ -51,6 +57,14 @@ header { text-align: center; }
  }
 
 
+
+
+
+
+
+
+
+
 #hobbies {
     display: flex;
     flex-direction: column;
@@ -58,9 +72,16 @@ header { text-align: center; }
 
 }
 
+
 #hobbies ul li:nth-child(even) {
         color:#000; 
 }
+
+
+
+
+
+
 
 
 #gallery {
@@ -77,6 +98,12 @@ header { text-align: center; }
 
 figcaption { font-size: 20pt;}
 
+
+
+
+
+
+
 #lit {
     border: 5px solid #677AA5 ;
     margin: 2rem;
@@ -89,10 +116,17 @@ figcaption { font-size: 20pt;}
     margin: 0 auto;
 }
 
+
+
 #lit div p:first-letter {
     float: left;
     font-size: 3em;
 }
+
+
+
+
+
 
 @media screen and (min-width:60em)  {
 
@@ -107,7 +141,36 @@ figcaption { font-size: 20pt;}
         align-items: center;
         font-size: 2rem;
         margin-left: 1rem;
-
-
                             }
+
+figure img {
+    width: 100%;
 }
+
+#lit div {
+    max-width: 100%;
+    columns: 40rem;
+}
+
+}
+
+@media screen and (min-width:100em) {
+        
+#gallery{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+        }
+
+ hr{ 
+        display: none;
+    } 
+
+    #gallery h2 {
+        grid-column: 1/-1;
+    }
+
+    figure {display:block;}
+
+}
+
+
