add hover and focus

--- a/css/nav.css
+++ b/css/nav.css
@@ -68,7 +68,7 @@ logo h1{
  
 
 
-.navbar-links a {
+.navbar-links a{
     color: whitesmoke;
     background-attachment: #333;
     font-size:1.5rem;
@@ -77,9 +77,15 @@ logo h1{
     text-decoration: none;
     display: inline-block;
 }
- 
 
-/* 
+.navbar-links a:hover,
+.navbar-links a:focus {
+    color: #333 ;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    outline: none;}
+
+/*
 media query for non-mobile nav bar
 min-width set to width of nav elements 
 such that no text wraps 
