--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,13 @@
         padding: 0;
     }
     
-    h1, h2, h3, h4, h5, h6 {
+    h1, h2, h4, h5, h6 {
         font-family: sans-serif;
         font-size: 35pt;
         margin: 0.5rem 0;
+    }
+    h3{
+        font-size: 20pt;
     }
     
     h2 {
@@ -62,11 +65,21 @@
         padding: 1rem;
         border-radius: 12px;
     }
+
+    #bio {     
+        border: 4px solid #677AA5;     
+        border-radius: 12px;     
+        padding: 1rem;     
+        margin: 1rem; } 
     
     #bio ul li:nth-child(even) {
         color: #000;
     }
-    
+
+    #bio img {
+        max-width: 100%;
+    }
+       
     /* 
        HOBBIES SECTION
         */
@@ -75,6 +88,7 @@
         flex-direction: column;
         align-items: center;
         padding: 1rem;
+        font-size: 15pt;
     }
     
     #hobbies ul {
@@ -190,7 +204,7 @@
         border-radius: 20px;
         margin: 2rem auto;
         display: block;
-        max-width: 100%;
+        max-width: 80%;
         padding: 1rem;
         background-color: #fff;
     }
@@ -282,55 +296,31 @@
             border-radius: 12px;
             padding: 1rem;
             margin: 1rem;
-            background-color:#ccc ;
+            background-color:white ;
         }
-        
-        #Blog img {
-            max-width: 45%;
-            border-radius: 10px;
-            
-        }
-        
-        #Blog figure {
-            text-align:auto;
-            margin: 1rem 0;
-        }
-        
-        figcaption {
-            font-size: 20pt;
-            margin-top: 0.5rem;
+     
+        figure img{
+            clip-path:circle(50%);
         }
 
-        @media screen and (min-width: 60em) {
-            #Blog {
-                display: grid;
-                grid-template-columns: repeat(3, 1fr); /* 3 columns */
-                gap: 1rem;
-                padding: 2rem;
-            }
-        
-            #Blog h2 {
-                grid-column: 1 / -1; /* Make the heading span all 3 columns */
-                text-align: center;
-            }
-        
-            #Blog figure {
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-            }
-        
-            #Blog img {
-                max-width: 100%; /* Full width inside its grid cell */
-            }
+        .pre {
+            border: 1px solid #000;
+            background-color: #000;
         }
-       
-        #Blog p {
-            font-size: 1.5rem; 
-        }
-        #Blog figure {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
+        
+        * {
+            box-sizing: border-box;
+          }
+          
+          .column {
+            float: left;
+            width: 33.33%;
+            padding: 5px;
+          }
+          
+          
+          .row::after {
+            content: "";
+            clear: both;
+            display: table;
+          }
